# DENG_HW

./: .gitignore  docker-compose.yaml  docker-ingest.sh  docker-pgadmin.sh  docker-postgres.sh  main.py  pyproject.toml  snippets.md
01_DOCKER_POSTGRESQL/: docker-compose.yaml
01_DOCKER_POSTGRESQL/pipeline/: Dockerfile  pipeline.py
01_DOCKER_POSTGRESQL/pipeline/pgadmin_data/: pgadmin4.db
01_DOCKER_TERRAFORM/basic/: terraform.tfstate  terraform.tfstate.backup
01_DOCKER_TERRAFORM/terraform_with_variables/: terraform.tfstate  terraform.tfstate.backup
02_TERRAFORM/basic/: main.tf
02_TERRAFORM/terraform_with_variables/: variables.tf
02_WORKFLOW_ORCHESTRATION/: docker-compose.yaml
04_AIRFLOW/: Airflow Notes.docx  Airflow Notes.md  docker-compose.yaml
04_AIRFLOW/dags/: Learn_Airflow.py  nyc_taxi_gcp.py
04_AIRFLOW/data/: summary_table.csv
04_AIRFLOW/logs/scheduler/: latest
keys/: .env_encoded
models/staging/: _sources.yml  stg_yellow_tripdata.sql
snapshots/: yellow_taxi_snapshot.sql
template_pipeline/: DATA-LOADING-PARQUET.ipynb  README.md  ingest_data.py  notebook.ipynb
template_pipeline/pgadmin_data/: pgadmin4.db
