[project]
name = "00-deng-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "google-cloud-storage>=3.8.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
    "psycopg[binary]>=3.3.3",
]
